# chisquared-optimization

./: README.md  chisquared.py  plot.py  pyproject.toml
