[tool.poetry]
name = "chisquared"
version = "0.1.0"
description = ""
authors = ["BasDorsman"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
kilonova-heating-rate = {git = "https://github.com/Basdorsman/kilonova-heating-rate.git", rev = "heating-beta-numba"}
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
